--- a/.gitignore
+++ b/.gitignore
@@ -2,8 +2,7 @@ node_modules
 .env
 
 # git init
-# git remote add origin GIT_URL
-# https://github.com/sonali7733/mern-auth.git
+# git remote add origin https://github.com/sonali7733/mern-auth.git
 # git add .
 # git commit -m "initial setup"
 
